--- a/interface/package.json
+++ b/interface/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.2",
     "compression-webpack-plugin": "^1.1.11",
     "react": "^16.4.1",
+    "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.3.0",
@@ -18,6 +19,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-app-rewired": "^1.5.2"
+    "webpack-api-mocker": "^1.5.7"
   }
 }
