--- a/interface/package.json
+++ b/interface/package.json
@@ -7,6 +7,7 @@
     "compression-webpack-plugin": "^1.1.11",
     "react": "^16.4.1",
     "react-app-rewired": "^1.5.2",
+    "react-app-rewire-styled-components": "^3.0.2",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.3.0",
