Add button and svg icon for dry mode

--- a/interface/package.json
+++ b/interface/package.json
@@ -20,6 +20,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "svg-partial-circle": "^1.0.0",
     "webpack-api-mocker": "^1.5.7"
   }
 }
